Complete all 15 improvement tasks
- Quick Wins (5/5):
  - Add DNS test check to verify.sh
  - Add playbook metadata to all playbooks
  - Create example inventories (remote, cisco, multi_host)
  - Add JSON output option to actionlog generation
  - Improve test_all.sh error reporting

- Priority Improvements (10/10):
  - Create reusable roles (timestamp, actionlog, validation)
  - Extract common patterns to roles
  - Add retry logic to network operations
  - Create group_vars/all.yml with defaults
  - Create playbook template system
  - Add input validation role (IP, URL, domain)
  - Enhance ansible.cfg with timeouts and callbacks
  - Improve install.sh error recovery
  - Add progress indicators to install.sh
  - Create agansible CLI wrapper

New features:
- JSON output format support
- Progress indicators and spinners
- Complete CLI interface (agansible command)
- Input validation for security
- Reusable role architecture
- Comprehensive documentation

Files: 30+ new files, 12+ modified files
Status: 100% complete (15/15 tasks)

--- a/playbooks/cisco/ssh_test.yml
+++ b/playbooks/cisco/ssh_test.yml
@@ -8,6 +8,12 @@
   gather_facts: no
   
   vars:
+    # Playbook metadata
+    playbook_version: "1.0.0"
+    playbook_author: "AGAnsible Team"
+    playbook_description: "SSH connectivity test for Cisco network devices with fallback to local ping test"
+    
+    # Playbook variables
     actionlog_dir: "{{ playbook_dir }}/../../actionlog/cisco/ssh_test"
     test_timeout: 30
   
