--- a/ansible.cfg
+++ b/ansible.cfg
@@ -6,8 +6,51 @@ forks = 1
 roles_path = roles
 retry_files_enabled = False
 
+# Output formatting
+stdout_callback = yaml
+display_skipped_hosts = False
+display_ok_hosts = True
+show_custom_stats = True
+
+# Timeout settings
+timeout = 30
+command_timeout = 30
+connect_timeout = 10
+pipelining = False
+
+# Callback plugins
+callback_plugins = ~/.ansible/plugins/callback:/usr/share/ansible/plugins/callback
+
+# Logging
+log_path = ./ansible.log
+# Uncomment to enable logging:
+# logging = True
+
+# Performance
+host_key_checking = False
+gathering = smart
+fact_caching = jsonfile
+fact_caching_connection = /tmp/ansible_facts
+fact_caching_timeout = 86400
+
+# Retry files
+retry_files_save_path = ./retry_files
+retry_files_enabled = False
+
 [privilege_escalation]
 become = False
+become_method = sudo
+become_user = root
+become_ask_pass = False
 
 [inventory]
 enable_plugins = host_list, script, auto, yaml, ini, toml
+
+[ssh_connection]
+ssh_args = -o ControlMaster=auto -o ControlPersist=60s -o StrictHostKeyChecking=no
+pipelining = False
+timeout = 10
+
+[persistent_connection]
+command_timeout = 30
+connect_timeout = 10
