--- a/playbooks/base/ping_test.yml
+++ b/playbooks/base/ping_test.yml
@@ -6,24 +6,28 @@
   connection: local
   
   vars:
+    # Playbook metadata
+    playbook_version: "1.0.0"
+    playbook_author: "AGAnsible Team"
+    playbook_description: "Network connectivity test using ICMP ping to a target host"
+    
+    # Playbook variables
     actionlog_dir: "{{ playbook_dir }}/../../actionlog/base/ping_test"
     target_host: "8.8.8.8"
     ping_count: 4
   
   tasks:
-    - name: Create actionlog directory if it doesn't exist
-      file:
-        path: "{{ actionlog_dir }}"
-        state: directory
-        mode: '0755'
-      delegate_to: localhost
-      run_once: true
+    - name: Setup actionlog directory
+      import_tasks: ../../../roles/common/tasks/actionlog_setup.yml
       
     - name: Ping {{ target_host }} using command module
       command: ping -c {{ ping_count }} {{ target_host }}
       register: ping_result
       failed_when: false
       changed_when: false
+      retries: "{{ retry_default_attempts | default(3) }}"
+      delay: "{{ retry_default_delay | default(2) }}"
+      until: ping_result.rc == 0 or ping_result.rc == 1  # 0 = success, 1 = some packets lost but command succeeded
       
     - name: Extract packet loss from ping results
       set_fact:
@@ -43,54 +47,45 @@
         test_message: "{{ 'All packets received' if packet_loss == 0 else 'Packet loss detected: ' + (packet_loss | string) + '%' }}"
         
     - name: Generate timestamp
-      command: date -Iseconds
-      register: timestamp_result
-      delegate_to: localhost
-      run_once: true
-      changed_when: false
-      
-    - name: Set timestamp fact
+      import_tasks: ../../../roles/common/tasks/timestamp.yml
+    
+    - name: Prepare actionlog data structure
       set_fact:
-        timestamp: "{{ timestamp_result.stdout }}"
-      delegate_to: localhost
-      run_once: true
-      
+        actionlog_data:
+          test_name: "Ping Test"
+          timestamp: "{{ timestamp }}"
+          host: "{{ inventory_hostname }}"
+          status: "{{ test_status }}"
+          message: "{{ test_message }}"
+          details:
+            target_host: "{{ target_host }}"
+            ping_count: "{{ ping_count }}"
+          metrics:
+            packet_loss_percent: "{{ packet_loss }}"
+            packets_transmitted: "{{ packets_transmitted }}"
+            packets_received: "{{ packets_received }}"
+          validation:
+            packet_loss_under_100: "{{ 'PASS' if packet_loss < 100 else 'FAIL' }}"
+            packets_received_gt_zero: "{{ 'PASS' if packets_received > 0 else 'FAIL' }}"
+          full_output: "{{ ping_result.stdout }}"
+          playbook_metadata:
+            version: "{{ playbook_version }}"
+            author: "{{ playbook_author }}"
+            description: "{{ playbook_description }}"
+    
     - name: Write test results to actionlog
-      copy:
-        content: |
-          ============================================
-          PING TEST RESULTS
-          ============================================
-          Test Date: {{ timestamp }}
-          Target Host: {{ target_host }}
-          Ping Count: {{ ping_count }}
-          
-          STATUS: {{ test_status }}
-          MESSAGE: {{ test_message }}
-          
-          Packet Loss: {{ packet_loss }}%
-          Packets Transmitted: {{ packets_transmitted }}
-          Packets Received: {{ packets_received }}
-          
-          FULL OUTPUT:
-          {{ ping_result.stdout }}
-          
-          ============================================
-          VALIDATION:
-          - Packet loss < 100%: {{ 'PASS' if packet_loss < 100 else 'FAIL' }}
-          - Packets received > 0: {{ 'PASS' if packets_received > 0 else 'FAIL' }}
-          ============================================
-        dest: "{{ actionlog_dir }}/ping_test_{{ timestamp | replace(':', '-') | replace('+', '-') }}.txt"
-        mode: '0644'
-      delegate_to: localhost
-      
+      import_tasks: ../../../roles/common/tasks/write_actionlog.yml
+      vars:
+        actionlog_filename: "ping_test_{{ inventory_hostname }}_{{ timestamp | replace(':', '-') | replace('+', '-') }}"
+    
     - name: Display ping results
       debug:
         msg:
           - "Test Status: {{ test_status }}"
           - "{{ test_message }}"
-          - "Packet Loss: {{ packet_loss }}"
-          - "Results saved to: {{ actionlog_dir }}/ping_test_{{ timestamp | replace(':', '-') | replace('+', '-') }}.txt"
+          - "Packet Loss: {{ packet_loss }}%"
+          - "Output Format: {{ output_format | default('text') }}"
+          - "Results saved to: {{ actionlog_dir }}/ping_test_{{ inventory_hostname }}_{{ timestamp | replace(':', '-') | replace('+', '-') }}.{{ 'json' if (output_format | default('text')) == 'json' else 'txt' }}"
           
     - name: Fail if ping test was unsuccessful
       fail:
