--- a/playbooks/cisco/ssh_test.yml
+++ b/playbooks/cisco/ssh_test.yml
@@ -18,13 +18,8 @@
     test_timeout: 30
   
   tasks:
-    - name: Create actionlog directory if it doesn't exist
-      file:
-        path: "{{ actionlog_dir }}"
-        state: directory
-        mode: '0755'
-      delegate_to: localhost
-      run_once: true
+    - name: Setup actionlog directory
+      import_tasks: ../../../roles/common/tasks/actionlog_setup.yml
       
     - name: Check if this is a local test (no actual Cisco device)
       set_fact:
@@ -59,61 +54,45 @@
       when: is_local_test
       
     - name: Generate timestamp
-      command: date -Iseconds
-      register: timestamp_result
-      delegate_to: localhost
-      run_once: true
-      changed_when: false
-      
-    - name: Set timestamp fact
+      import_tasks: ../../../roles/common/tasks/timestamp.yml
+    
+    - name: Prepare actionlog data structure
       set_fact:
-        timestamp: "{{ timestamp_result.stdout }}"
-      delegate_to: localhost
-      run_once: true
-      
+        actionlog_data:
+          test_name: "SSH Test"
+          timestamp: "{{ timestamp }}"
+          host: "{{ inventory_hostname }}"
+          status: "{{ test_status }}"
+          message: "{{ test_message }}"
+          details:
+            connection_type: "{{ ansible_connection | default('local') }}"
+            test_mode: "{{ 'Local Test' if is_local_test else 'Cisco Device Test' }}"
+            device_info: "{{ device_info | default([]) }}"
+          metrics:
+            is_local_test: "{{ is_local_test }}"
+            ssh_connection_successful: "{{ test_status == 'SUCCESS' }}"
+          validation:
+            ssh_connection: "{{ 'PASS' if test_status == 'SUCCESS' else 'FAIL' }}"
+            device_response: "{{ 'PASS' if (device_info | length > 0 or is_local_test) else 'FAIL' }}"
+            test_completed: "PASS"
+          full_output: "{{ version_output | to_nice_yaml if (not is_local_test and version_output is defined) else (ping_test | to_nice_yaml if (is_local_test and ping_test is defined) else 'N/A') }}"
+          playbook_metadata:
+            version: "{{ playbook_version }}"
+            author: "{{ playbook_author }}"
+            description: "{{ playbook_description }}"
+    
     - name: Write test results to actionlog
-      copy:
-        content: |
-          ============================================
-          CISCO SSH TEST RESULTS
-          ============================================
-          Test Date: {{ timestamp }}
-          Host: {{ inventory_hostname }}
-          Connection Type: {{ ansible_connection | default('local') }}
-          Test Mode: {{ 'Local Test' if is_local_test else 'Cisco Device Test' }}
-          
-          STATUS: {{ test_status }}
-          MESSAGE: {{ test_message }}
-          
-          {% if not is_local_test and device_info is defined %}
-          DEVICE INFORMATION:
-          {{ device_info | to_nice_yaml }}
-          {% endif %}
-          
-          {% if not is_local_test and version_output is defined %}
-          FULL OUTPUT:
-          {{ version_output | to_nice_yaml }}
-          {% elif is_local_test and ping_test is defined %}
-          PING TEST OUTPUT:
-          {{ ping_test | to_nice_yaml }}
-          {% endif %}
-          
-          ============================================
-          VALIDATION:
-          - SSH Connection: {{ 'PASS' if test_status == 'SUCCESS' else 'FAIL' }}
-          - Device Response: {{ 'PASS' if (device_info | length > 0 or is_local_test) else 'FAIL' }}
-          - Test Completed: PASS
-          ============================================
-        dest: "{{ actionlog_dir }}/ssh_test_{{ inventory_hostname }}_{{ timestamp | replace(':', '-') | replace('+', '-') }}.txt"
-        mode: '0644'
-      delegate_to: localhost
-      
+      import_tasks: ../../../roles/common/tasks/write_actionlog.yml
+      vars:
+        actionlog_filename: "ssh_test_{{ inventory_hostname }}_{{ timestamp | replace(':', '-') | replace('+', '-') }}"
+    
     - name: Display test results
       debug:
         msg:
           - "Test Status: {{ test_status }}"
           - "{{ test_message }}"
-          - "Results saved to: {{ actionlog_dir }}/ssh_test_{{ inventory_hostname }}_{{ timestamp | replace(':', '-') | replace('+', '-') }}.txt"
+          - "Output Format: {{ output_format | default('text') }}"
+          - "Results saved to: {{ actionlog_dir }}/ssh_test_{{ inventory_hostname }}_{{ timestamp | replace(':', '-') | replace('+', '-') }}.{{ 'json' if (output_format | default('text')) == 'json' else 'txt' }}"
           
     - name: Fail if SSH test was unsuccessful
       fail:
