--- a/playbooks/system/curl_test.yml
+++ b/playbooks/system/curl_test.yml
@@ -23,13 +23,8 @@
         description: "Google connectivity test"
   
   tasks:
-    - name: Create actionlog directory if it doesn't exist
-      file:
-        path: "{{ actionlog_dir }}"
-        state: directory
-        mode: '0755'
-      delegate_to: localhost
-      run_once: true
+    - name: Setup actionlog directory
+      import_tasks: ../../../roles/common/tasks/actionlog_setup.yml
       
     - name: Check if curl is installed
       command: which curl
@@ -79,59 +74,46 @@
         total_count: "{{ test_results | length }}"
         
     - name: Generate timestamp
-      command: date -Iseconds
-      register: timestamp_result
-      delegate_to: localhost
-      run_once: true
-      changed_when: false
-      
-    - name: Set timestamp fact
+      import_tasks: ../../../roles/common/tasks/timestamp.yml
+    
+    - name: Prepare actionlog data structure
       set_fact:
-        timestamp: "{{ timestamp_result.stdout }}"
-      delegate_to: localhost
-      run_once: true
-      
+        actionlog_data:
+          test_name: "Curl Test"
+          timestamp: "{{ timestamp }}"
+          host: "{{ inventory_hostname }}"
+          status: "{{ overall_status }}"
+          message: "HTTP/HTTPS connectivity test completed - {{ success_count }}/{{ total_count }} tests passed"
+          details:
+            curl_installed: "{{ curl_installed }}"
+            curl_path: "{{ curl_path }}"
+            test_urls: "{{ test_urls }}"
+          metrics:
+            success_count: "{{ success_count }}"
+            total_count: "{{ total_count }}"
+            test_results: "{{ test_results }}"
+          validation:
+            curl_installation: "{{ 'PASS' if curl_installed else 'FAIL' }}"
+            all_urls_accessible: "{{ 'PASS' if overall_status == 'SUCCESS' else 'FAIL' }}"
+            http_status_codes: "{{ 'PASS' if overall_status == 'SUCCESS' else 'FAIL' }}"
+          full_output: "{{ curl_results | to_nice_yaml }}"
+          playbook_metadata:
+            version: "{{ playbook_version }}"
+            author: "{{ playbook_author }}"
+            description: "{{ playbook_description }}"
+    
     - name: Write test results to actionlog
-      copy:
-        content: |
-          ============================================
-          CURL TEST RESULTS
-          ============================================
-          Test Date: {{ timestamp }}
-          Host: {{ inventory_hostname }}
-          Curl Installed: {{ curl_installed }}
-          Curl Path: {{ curl_path }}
-          
-          OVERALL STATUS: {{ overall_status }}
-          Tests Passed: {{ success_count }}/{{ total_count }}
-          
-          {% for result in test_results %}
-          --------------------------------------------
-          Test: {{ result.description }}
-          URL: {{ result.url }}
-          Expected Status: {{ result.expected_status }}
-          Actual Status: {{ result.actual_status }}
-          Status: {{ 'PASS' if result.success else 'FAIL' }}
-          Response Time: {{ result.response_time }}s
-          Content Length: {{ result.content_length }} bytes
-          {% endfor %}
-          
-          ============================================
-          VALIDATION:
-          - Curl Installation: {{ 'PASS' if curl_installed else 'FAIL' }}
-          - All URLs Accessible: {{ 'PASS' if overall_status == 'SUCCESS' else 'FAIL' }}
-          - HTTP Status Codes: {{ 'PASS' if overall_status == 'SUCCESS' else 'FAIL' }}
-          ============================================
-        dest: "{{ actionlog_dir }}/curl_test_{{ inventory_hostname }}_{{ timestamp | replace(':', '-') | replace('+', '-') }}.txt"
-        mode: '0644'
-      delegate_to: localhost
-      
+      import_tasks: ../../../roles/common/tasks/write_actionlog.yml
+      vars:
+        actionlog_filename: "curl_test_{{ inventory_hostname }}_{{ timestamp | replace(':', '-') | replace('+', '-') }}"
+    
     - name: Display test results
       debug:
         msg:
           - "Overall Status: {{ overall_status }}"
           - "Tests Passed: {{ success_count }}/{{ total_count }}"
-          - "Results saved to: {{ actionlog_dir }}/curl_test_{{ inventory_hostname }}_{{ timestamp | replace(':', '-') | replace('+', '-') }}.txt"
+          - "Output Format: {{ output_format | default('text') }}"
+          - "Results saved to: {{ actionlog_dir }}/curl_test_{{ inventory_hostname }}_{{ timestamp | replace(':', '-') | replace('+', '-') }}.{{ 'json' if (output_format | default('text')) == 'json' else 'txt' }}"
       loop: "{{ test_results }}"
       loop_control:
         label: "{{ item.description }}: {{ 'PASS' if item.success else 'FAIL' }} ({{ item.actual_status }})"
