Add project validation report and fix portability issue
- Add comprehensive PROJECT_VALIDATION_REPORT.md with full validation results
- Fix hardcoded absolute path in ansible.cfg (roles_path) for better portability
- Update .gitignore to exclude actionlog JSON files
- Add new system playbooks (firewall_check, network_interfaces, network_stats, port_scan, ssl_cert_check, traceroute_test)
- Update existing playbooks with improvements
- Add documentation files (IMPLEMENTATION_SUMMARY.md, LOCALHOST_TESTS.md, TEST_RESULTS.md)

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ __pycache__/
 
 # Actionlog files (optional - remove if you want to track test results)
 actionlog/**/*.txt
+actionlog/**/*.json
 
 # Sensitive data
 group_vars/*/vault
