--- a/playbooks/network/ospf_status.yml
+++ b/playbooks/network/ospf_status.yml
@@ -18,10 +18,10 @@
   
   tasks:
     - name: Setup actionlog directory
-      import_tasks: ../../../roles/common/tasks/actionlog_setup.yml
+      import_tasks: "{{ playbook_dir }}/../../roles/common/tasks/actionlog_setup.yml"
     
     - name: Generate timestamp
-      import_tasks: ../../../roles/common/tasks/timestamp.yml
+      import_tasks: "{{ playbook_dir }}/../../roles/common/tasks/timestamp.yml"
     
     # Cisco IOS OSPF Commands
     - name: Get OSPF neighbor status (Cisco IOS)
@@ -118,7 +118,7 @@
             description: "{{ playbook_description }}"
     
     - name: Write test results to actionlog
-      import_tasks: ../../../roles/common/tasks/write_actionlog.yml
+      import_tasks: "{{ playbook_dir }}/../../roles/common/tasks/write_actionlog.yml"
       vars:
         actionlog_filename: "ospf_status_{{ inventory_hostname }}_{{ timestamp | replace(':', '-') | replace('+', '-') }}"
     
