--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,11 +3,11 @@ inventory = inventories/localhost.ini
 host_key_checking = False
 interpreter_python = auto_silent
 forks = 1
-roles_path = roles
+roles_path = ./roles
 retry_files_enabled = False
 
 # Output formatting
-stdout_callback = yaml
+stdout_callback = default
 display_skipped_hosts = False
 display_ok_hosts = True
 show_custom_stats = True
@@ -27,7 +27,6 @@ log_path = ./ansible.log
 # logging = True
 
 # Performance
-host_key_checking = False
 gathering = smart
 fact_caching = jsonfile
 fact_caching_connection = /tmp/ansible_facts
@@ -35,7 +34,6 @@ fact_caching_timeout = 86400
 
 # Retry files
 retry_files_save_path = ./retry_files
-retry_files_enabled = False
 
 [privilege_escalation]
 become = False
