docs: add HowTo.md, fix README links and TOC anchors, update .gitignore
- Add HowTo.md with full verbose instructions (expands roughdraft)
- README: explicit HTML anchors for TOC links (fix Actionlog System etc.)
- README: add missing TOC entries, Actionlog link to ACTIONLOG_SYSTEM_REVIEW
- README: add LOCALHOST_TESTS, LINTING to docs, update playbook list
- .gitignore: add roughdraft.md/ROUGHDRAFT.md (do not upload)

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,10 @@ Thumbs.db
 notes.md
 NOTES.md
 
+# Rough draft / work-in-progress docs (do not upload to GitHub)
+roughdraft.md
+ROUGHDRAFT.md
+
 # Inventory with sensitive data (uncomment if needed)
 # inventories/production.ini
 # inventories/staging.ini
