Reorganize docs into docs/, add vault template and VAULT.md, update links and project structure

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ actionlog/**/*.json
 group_vars/*/vault
 host_vars/*/vault
 *.vault
+vault/.vault_pass
+vault/.vault_password
 **/secrets.yml
 **/passwords.yml
 **/credentials.yml
